[metadata]

# package name / info
description-file =
    README.md

# classifiers are a pypi thing, but worth having
classifier =
    Environment :: SE
    Intended Audience :: Information Technology
    Intended Audience :: DevOps
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

# enable pbr
[global]
setup-hooks =
    pbr.hooks.setup_hook

#  Specifies that a pure-python wheel is "universal" python2 / 3 compat
[wheel]
universal = 1

# pbr config
[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
